# slobil

./: .gitattributes  .gitignore  .gitmodules  COPYING  Makefile  Makefile.am  README.md  arbel.c  arbel.h  briple  configure  configure.ac  init_build.sh  libbriple.la  new_parse.c  operator.c  parse.c  primitive.c  save.c  statement.c  test_statement.c  todo.org  utility.c
arbnum/: arbnum.arb  timetest_vector_create.arb
docs/: Makefile  arbel-manual.html  arbel-manual.org  arbel.1  arbel.css  arbel.dbk  arbel.html  arbel.org  arbel.texi  arbel.texinfo  arbel_manual.org  arbel_nv.dbk  arbel_revised.html  arbel_revised.org  briple.1  briple.html  briple.org  examples.html  examples.mro.html  index.html  index.mro.html  mysite.mro  onbu.1  onbu.html  onbu.org  slobil.1  slobil.html  slobil.org  theme-readtheorg-local.setup  wob.1  wob.html  wob.org
docs/arbel-multipage/: A-Line_002dOriented-Text-Editor.html  ARBEL-is-a-Registry_002dBased-Environment-and-Language.html  Access-data-in-Registry.html  Access-search-and-modify-string-elements.html  Additional-details-about-colon-notation.html  Apply-Instructions-to-elements-of-a-Registry.html  Apply-Operations-to-elements-of-a-Registry.html  Arithmetic-operations.html  Basic-Linear-Algebra.html  Boolean-operations.html  Classify-a-registry.html  Column-operations.html  Combine-strings.html  Common-mathematical-operations.html  Comparison-operations.html  Compute-Factorial.html  Control-flow-operations.html  Conversion-operations.html  Convert-to-register.html  Convert-to-string.html  Creation.html  Dispatch.html  Distinguishing-Features.html  Environment-operations.html  Environment.html  Error-handling.html  Example-A-Line_002dOriented-Text-Editor.html  Example-Basic-Linear-Algebra.html  Example-Compute-Factorial.html  Example-Dispatch.html  Example-Numerical-Differentiation.html  Example-Numerical-Integration.html  Example-Split-a-String.html  Examples.html  Execute-code-in-a-registry.html  Exit-ARBEL.html  File-operations.html  Input-and-output-files-and-state.html  Insert-move-and-remove-data-to-and-from-registers.html  Instruction-operations.html  (+26 more)
emacs/: #arbel.el#  .#arbel.el  arbel.el  briple.el  onbu.el  slobil.el  wob.el
examples/: account.slob  arbed.arb  arbed.slob  arbed.wob  arbedit.arb  background.arb  background.slob  background.wob  bripleed.brpl  column_test.arb  deadfish.arb  deadfish.slob  deadfish.wob  deriv.arb  deriv.wob  dispatch.arb  factorial.arb  factorial.onbu  factorial.slob  fizzbuzz.arb  fizzbuzz.brpl  fizzbuzz.slob  fizzbuzz.wob  integrate.arb  integrate.slob  integrate.wob  link.arb  link.c  link_compile.sh  matrix.arb  matrix.slob  matrix.wob  ninetynine.arb  onbued.arb  parse_csv.arb  parse_csv.brpl  parse_csv.slob  parse_csv.wob  quicksort.arb  quicksort.slob  (+24 more)
src/: Makefile  arbel.c  arbel.h  arg.c  briple.c  briple.h  compute.c  conversion.c  copy.c  data.c  memory.c  object.c  onbu.c  onbu.h  operator.c  operator.expand.c  operator.mro.c  operator.pshm  operator.pushmac  parse.c  print.c  register.c  registry.c  save.c  slobil.c  slobil.h  slot.c  state.c  statement.c  task.c  trash.c  type.c  utility.c  wob.c  wob.h
test/: test_ops.sh
test/built_ins/: op_answer.arb  op_arithematic.arb  op_comparison.arb  op_delete.arb  op_do_to_all.arb  op_exist.arb  op_get.arb  op_if.arb  op_list.arb  op_move.arb  op_next.arb  op_reg.arb  op_registry.arb  op_set.arb  op_string_append.arb  op_string_length.arb  template.arb  test_ops.arb
test/ops/: op_answer.arb  op_answer.brpl  op_answer.onbu  op_answer.slob  op_answer.wob  op_arithmetic.arb  op_arithmetic.brpl  op_arithmetic.onbu  op_arithmetic.slob  op_call.arb  op_call.brpl  op_call.onbu  op_call.slob  op_ceiling.arb  op_ceiling.brpl  op_ceiling.onbu  op_ceiling.slob  op_code.arb  op_code.brpl  op_code.onbu  op_code.slob  op_collapse.arb  op_collapse.brpl  op_collapse.onbu  op_collapse.slob  op_combine.slob  op_comparison.arb  op_comparison.brpl  op_comparison.onbu  op_comparison.slob  op_comparison.wob  op_delete.arb  op_delete.brpl  op_delete.onbu  op_delete.slob  op_delete.wob  op_do.arb  op_do.brpl  op_do.onbu  op_do.slob  (+157 more)
test/syntax/: active_expression.arb
test/unit/: test_arg.c  test_copy.c
tools/: arbdoc.arb
